--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,4 +1,8 @@
 {
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["./src/*"]
+  },
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": [
     "vite.config.*",
