--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,4 +1,8 @@
 {
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["./src/*"]
+  },
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
