--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.323.0",
     "pinia": "^2.1.7",
     "radix-vue": "^1.4.3",
