--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.1",
     "@vee-validate/zod": "^4.12.5",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
