--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^4.1.1",
+    "@radix-icons/vue": "^1.0.0",
     "@vee-validate/zod": "^4.12.5",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
@@ -23,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.323.0",
     "pinia": "^2.1.7",
+    "radix-icons": "^1.0.0",
     "radix-vue": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
